--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 *, *:before, *:after {
@@ -18,6 +19,7 @@ html {
   border-radius: 2px;
   padding: 2rem;
   border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 
 /*clearfix*/
@@ -65,3 +67,40 @@ html {
 .strip a:nth-child(5n+3) img { transform: rotate(8deg); }
 .strip a:nth-child(5n+4) img { transform: rotate(-11deg); }
 .strip a:nth-child(5n+5) img { transform: rotate(12deg); }
+
+
+.btn-primary {
+  padding: 0.5em 1.5em;
+  margin: 0.5em;
+  margin-bottom: 1em;
+  border-radius: 50px;
+  border: 0;
+  background-color: #ffc600;
+}
+
+.btn-primary:hover,
+.btn-primary:focus {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.btn-primary:active {
+  background-color: white;
+}
+
+h1 {
+  margin: 0;
+}
+
+.rgb {
+  margin-bottom: 1em;
+  padding: 1em;
+  border-radius: 10px;
+  background-color: #ffc600;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.rgb > * {
+  margin: 0.25em;
+  font-size: 1.25rem;
+  font-weight: bold;
+}
